# LearnCpp

./: CMakeLists.txt  Disclaimer.md  LICENSE  README.md
GradeHelper/: CMakeLists.txt  main.cpp
LambdaTest/: CMakeLists.txt  conv_lambda.md  lambda_conv0.md  main.cpp  test.h  test1.cpp  test2.cpp
LambdaTest/docs/: lambda_conv1.md  lambda_conv2.md  lambda_conv3.md  lambda_conv4.md  lambda_conv5.md
LearnCpp/: CMakeLists.txt  ccore.h  cmain.c  core.h  main.cpp
LearnCpp/cmodules/: calc.c  donut.c  guess.c
LearnCpp/logutil/: LogUtil.cpp  LogUtil.h
LearnCpp/modules/: Person.cpp  Person.h  Student.h  grade.cpp  guess.cpp  use_Person.cpp  use_Student.cpp  use_person.cpp  use_student.cpp
LearnCpp/primer/: Account.cpp  Account.h  Sales_data.cpp  Sales_data.h  Screen.cpp  Screen.h  biggies.cpp  biggies.h  elim_dups.cpp  elim_dups.h  use_Account.cpp  use_Sales.cpp  use_account.cpp  use_biggies.cpp  use_elim.cpp  use_sales.cpp  use_screen.cpp
LearnCpp/std_done/: Task.h  TodoList.cpp  TodoList.h  done_main.cpp
MoveTest/: CMakeLists.txt  MyBuffer.h  SimpleString.h  main.cpp  test.h  use_MyBuffer.cpp  use_SimpleString.cpp
MoveTest/my_buffer/: MyBuffer.h  use_my_buffer.cpp
MoveTest/resource_pool/: Node.h  ResourcePool.h  test_res_pool.cpp
MoveTest/simple_string/: SimpleString.h  use_simple_str.cpp
QtTest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
ThreadTest/: .gitignore  CMakeLists.txt  ThreadGuard.h  main.cpp
cmodules/: donut.c
cpp26test/: .gitignore  CMakeLists.txt  ThreadGuard.h  conv_thread.md  main.cpp
modules/: Person.cpp  grade.cpp
primer/: Sales_main.cpp  Screen.h
qt6cpp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qt6_conv.md
src/: DebugErr.h  Person.cpp  Person.h  Sales_data.cpp  Sales_data.h  ccore.h  cmain.c  core.cpp  core.h  core.hpp  grade.cpp  main.cpp
src/1/: calc.c
src/1/donut/: donut.c
src/1/guess/: guess.c
src/ClassTest/: ClassMain.cpp  Person.h
src/Sales/: DebugErr.cpp  DebugErr.h  Sales_main.cpp
src/cmodules/: guess.c
src/logutil/: LogUtil.cpp
src/modules/: DebugErr.cpp  DebugUtil.cpp  DebugUtil.hpp  Person.cpp  Person.h  Person_main.cpp  Sales_data.cpp  Student.hpp  Student_main.cpp  calc.c  calc.h  grade.cpp  grade.h  grade.hpp  guess.cpp
src/primer/: Sales_data.h  Screen_main.cpp
